Sync production state: mobile navbar, contact form, admin features, MySQL backup
- Add responsive mobile navbar with hamburger menu
- Add contact form in footer with email functionality
- Add admin time-off management and schedule view
- Add booking cancellation with reasons
- Configure MySQL persistence with docker-compose
- Add automated MySQL backup script and cron job
- Update nginx config with security headers and rate limiting
- Update email configuration for contact form
- Add migrations: 0003_timeoff, 0003_add_cancel_reason

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,17 @@ build/
 .DS_Store
 .idea/
 .vscode/Thu Oct 16 09:30:02 PM +0330 2025
+
+# Backups
+backups/
+*.sql
+*.sql.gz
+
+# Secrets
+*/.env
+*.pem
+*.key
+
+# Logs
+*.log
+/var/log/
