--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,13 +6,17 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends build-essential libjpeg62-turbo-dev zlib1g-dev \
+    && apt-get install -y --no-install-recommends \
+        build-essential \
+        libjpeg62-turbo-dev \
+        zlib1g-dev \
+        default-libmysqlclient-dev \
+        pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --upgrade pip \
     && pip wheel --no-cache-dir --no-deps -r requirements.txt -w /wheels
-
 
 FROM python:3.12-slim
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -23,7 +27,10 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends libjpeg62-turbo curl \
+    && apt-get install -y --no-install-recommends \
+        libjpeg62-turbo \
+        curl \
+        libmariadb3 \
     && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /wheels /wheels
