--- a/deploy/reverse-proxy/nginx.conf
+++ b/deploy/reverse-proxy/nginx.conf
@@ -1,65 +1,198 @@
-upstream backend_service {
-    server backend:8000;
-    keepalive 16;
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 2048;
+    use epoll;
+    multi_accept on;
 }
 
-upstream frontend_service {
-    server frontend:80;
-    keepalive 16;
-}
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-server {
-    listen 80;
-    server_name _;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
+    access_log /var/log/nginx/access.log main;
+
+    # Performance optimizations
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+
+    # Client settings
     client_max_body_size 25m;
+    client_body_timeout 12;
+    client_header_timeout 12;
+    send_timeout 10;
 
-    add_header X-Content-Type-Options "nosniff";
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/x-javascript image/svg+xml;
+    gzip_disable "msie6";
 
-    location /healthz {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 "ok";
+    # Cache configuration
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=static_cache:10m max_size=1g inactive=60m use_temp_path=off;
+
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=100r/s;
+    limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+
+    # Upstream services
+    upstream backend_service {
+        server backend:8000;
+        keepalive 32;
     }
 
-    location /api/ {
-        proxy_pass http://backend_service;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_redirect off;
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 15s;
+    upstream frontend_service {
+        server frontend:80;
+        keepalive 32;
     }
 
-    location /media/ {
-        proxy_pass http://backend_service;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 15s;
+    # HTTP server - redirect to HTTPS when SSL is enabled
+    server {
+        listen 80;
+        server_name _;
+
+        # Allow ACME challenge for Let's Encrypt
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Health check endpoint (always HTTP)
+        location /healthz {
+            access_log off;
+            add_header Content-Type text/plain;
+            return 200 "ok";
+        }
+
+        # Redirect all other traffic to HTTPS (uncomment after SSL setup)
+        # location / {
+        #     return 301 https://$host$request_uri;
+        # }
+
+        # Temporary: serve normally until SSL is configured
+        location / {
+            limit_req zone=general_limit burst=50 nodelay;
+            limit_conn conn_limit 10;
+
+            # Security headers
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+            proxy_pass http://frontend_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_redirect off;
+            proxy_read_timeout 60s;
+            proxy_connect_timeout 15s;
+        }
+
+        location /api/ {
+            limit_req zone=api_limit burst=20 nodelay;
+
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-Frame-Options "SAMEORIGIN" always;
+
+            proxy_pass http://backend_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            proxy_redirect off;
+            proxy_read_timeout 60s;
+            proxy_connect_timeout 15s;
+        }
+
+        location /media/ {
+            limit_req zone=general_limit burst=30;
+
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header Cache-Control "public, max-age=31536000, immutable";
+
+            proxy_pass http://backend_service;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+            proxy_cache static_cache;
+            proxy_cache_valid 200 60m;
+            proxy_cache_bypass $http_pragma $http_authorization;
+        }
     }
 
-    location / {
-        proxy_pass http://frontend_service;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        proxy_redirect off;
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 15s;
-    }
+    # HTTPS server (uncomment after SSL setup)
+    # server {
+    #     listen 443 ssl http2;
+    #     server_name _;
+    #
+    #     ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+    #     ssl_protocols TLSv1.2 TLSv1.3;
+    #     ssl_ciphers HIGH:!aNULL:!MD5;
+    #     ssl_prefer_server_ciphers on;
+    #     ssl_session_cache shared:SSL:10m;
+    #     ssl_session_timeout 10m;
+    #
+    #     # Security headers
+    #     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    #     add_header X-Content-Type-Options "nosniff" always;
+    #     add_header X-Frame-Options "SAMEORIGIN" always;
+    #     add_header X-XSS-Protection "1; mode=block" always;
+    #     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    #
+    #     location /healthz {
+    #         access_log off;
+    #         add_header Content-Type text/plain;
+    #         return 200 "ok";
+    #     }
+    #
+    #     location /api/ {
+    #         limit_req zone=api_limit burst=20 nodelay;
+    #         proxy_pass http://backend_service;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_redirect off;
+    #     }
+    #
+    #     location /media/ {
+    #         limit_req zone=general_limit burst=30;
+    #         add_header Cache-Control "public, max-age=31536000, immutable";
+    #         proxy_pass http://backend_service;
+    #         proxy_cache static_cache;
+    #         proxy_cache_valid 200 60m;
+    #     }
+    #
+    #     location / {
+    #         limit_req zone=general_limit burst=50 nodelay;
+    #         proxy_pass http://frontend_service;
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
+    # }
 }
