--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
     "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.1",
-    "i18next-browser-languagedetector": "^7.2.0"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^4.3.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.8"
   }
 }
