--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
       - backend/.env
     volumes:
       - media_data:/app/media
+    ports:
+      - "127.0.0.1:8000:8000"
     restart: unless-stopped
     depends_on:
       db:
@@ -80,6 +82,8 @@ services:
       args:
         VITE_API_BASE: ${VITE_API_BASE:-/api}
     image: ghcr.io/al1mk/meister-frontend:latest
+    ports:
+      - "127.0.0.1:5173:80"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/"]
