chore(prod): sync production server state (frontend, backend, compose, configs) [no secrets]

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@ backups/
 # Logs
 *.log
 /var/log/
+
+# Additional security patterns
+**/*.env
+*.crt
+.next/
+.cache/
+logs/
+.docker/
+
+# Backup files
+*.bak.*
+*.bak
+.bak.*
