--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,23 +1,47 @@
-DJANGO_SECRET_KEY=change_me_in_production
+# Django Security
+DJANGO_SECRET_KEY=change_me_in_production_use_random_50_chars
+SECRET_KEY=change_me_in_production_use_random_50_chars
 DEBUG=False
 ALLOWED_HOSTS=meister.local,127.0.0.1,localhost
 TIME_ZONE=Europe/Berlin
-
-# Database configuration (SQLite by default)
-DB_ENGINE=sqlite
-SQLITE_NAME=db.sqlite3
-# Uncomment and adjust for MySQL usage
-# DB_ENGINE=mysql
-# DB_NAME=meister
-# DB_USER=meister
-# DB_PASS=StrongPass123!
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
 
 # CORS / CSRF
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 CSRF_TRUSTED_ORIGINS=http://localhost,http://127.0.0.1
 
-# Google Reviews
-GOOGLE_PLACES_API_KEY=your_google_places_api_key
-GOOGLE_PLACE_ID=your_google_place_id
+# Database configuration (SQLite by default)
+DB_ENGINE=sqlite
+SQLITE_NAME=db.sqlite3
+# Uncomment and adjust for MySQL/MariaDB usage in production
+# DB_ENGINE=mysql
+# DB_NAME=meister
+# DB_USER=meister
+# DB_PASSWORD=StrongDatabasePassword123!
+# DB_PASS=StrongDatabasePassword123!
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+
+# Redis configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
+# Google Reviews Integration
+GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
+GOOGLE_PLACE_ID=your_google_place_id_here
+
+# Admin Panel Basic Auth
+BASIC_ADMIN_PASSWORD=change_me_secure_admin_password
+
+# Email Configuration (SMTP)
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your_email@example.com
+EMAIL_HOST_PASSWORD=your_email_password
+DEFAULT_FROM_EMAIL=noreply@example.com
+
+# Twilio SMS Notifications (optional)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_FROM_NUMBER=+1234567890
