feat: implement frontend quality gates and monitoring
- Add ESLint with React best practices (no-undef, curly, eqeqeq)
- Set up Husky + lint-staged for pre-commit hooks
- Add GitHub Actions CI workflow (lint + build + smoke tests)
- Integrate Sentry error tracking (optional, behind VITE_SENTRY_DSN flag)
- Create smoke test script for critical endpoints
- Update BarberCard to use WebP images with fallback
- Add comprehensive frontend documentation

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,1 +1,11 @@
+# API Configuration
 VITE_API_BASE=/api
+
+# Sentry Error Tracking (Optional)
+# Only set this if you want to enable Sentry error tracking
+# Get your DSN from https://sentry.io/settings/projects/
+# VITE_SENTRY_DSN=https://your-dsn@sentry.io/your-project-id
+
+# Release Version (Optional, for Sentry)
+# Automatically set in CI/CD, but can be overridden locally
+# VITE_RELEASE=local-dev
