feat(telegram): beautified Markdown messages + robust escaping
Beautified all Telegram bot messages with Markdown formatting and emojis:
- Help menu with emoji icons
- Today/Tomorrow appointment listings with structured format
- Statistics with visual breakdown
- Notification messages (created/updated/deleted) with bold headers

Added robust Markdown escaping utility function to safely escape special
characters: _ * [ ] ( ) ~ ` > # + - = | { } . \!

Enhanced error logging in all command handlers to include HTTP status
codes and response body previews.

Docker-compose updates:
- Added TELEGRAM_BOT_SECRET environment variable
- Mounted backend .env for proper secret loading
- Added .env to project root for compose variable substitution

Zero downtime deployment. All secrets excluded.

Components changed:
- telegram-bot/app.py: Complete rewrite with beautified messages
- docker-compose.yml: Environment variable updates
- telegram-bot/.env.sample: Template for configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,6 +90,9 @@ services:
     - frontend-network
     ports:
     - 127.0.0.1:8000:8000
+    environment:
+      TELEGRAM_BOT_SECRET: ${TELEGRAM_BOT_SECRET}
+      TELEGRAM_NOTIFY_URL: http://telegram-bot:8787/notify
   frontend:
     build:
       context: ./frontend
