feat(nginx): add backend routes include for health/webhook/unsubscribe endpoints

--- a/deploy/reverse-proxy/nginx.conf
+++ b/deploy/reverse-proxy/nginx.conf
@@ -135,6 +135,9 @@ http {
             return 200 "ok";
         }
 
+        # Backend routes: health, webhooks, unsubscribe
+        include /etc/nginx/includes/backend-routes.conf;
+
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             proxy_pass http://backend_service;
